<resources>
    <string name="app_name">RowBot-P2</string>
    <string name="StartButton">Start</string>
    <string name="StatButton">Statistics</string>
    <string name="GuideButton">Guide</string>
    <string name="SketchyImageDescription">This is the imageView holding the image of sketchy</string>
    <string name="videoView">Video</string>
    <string name="termButton">Terminology</string>
    <string name="techButton">technique</string>
    <string name="setupButton">Setup</string>
    <string name="PowergraphImageDescription">This is the imageView holding the image of the power graph</string>
    <string name="SessionData">Target time:\n00:00\n\nSPM:\n00\n\nPace:\n00\n\nDistance:\n0/0m</string>
    <string name="StartSession">Start</string>
    <string name="PauseSession">Pause</string>
    <string name="StopSession">Stop</string>
    <string name="returnSession">Return</string>
    <string name="saveSession">Save</string>
    <string name="timerText">Time : \u0020</string>
    <string name="SessionInputContinue">Continue</string>
    <string name="SessionInputPreset">Please select the amount of time you want to workout.</string>
    <string name="targetDistance">@string/targetDistance</string>
    <string name="targetTime">@string/targetTime</string>
    <string-array name="Presets">
        <item>Choose a build-in preset.</item>
        <item>5 minutes.</item>
        <item>10 minutes.</item>
        <item>20 minutes.</item>
        <item>30 minutes.</item>
        <item>60 minutes.</item>
        <item>90 minutes.</item>
        <item>Custom</item>
    </string-array>
    <string name="currentDistnace">0/</string>
    <string name="statSelection">Please select an option on the right\nto review your statistics.</string>
    <string name="guideSelection">Please select an option on the right\nto learn more about the selected topic.</string>
    <string name="SessionInputDistance">Distance in meters</string>
    <string name="SessionInputTime">Time in minutes</string>
    <string name="SessionInputPresetNone">No time has been selected yet.</string>
    <string name="SessionInputPresetSelection1">You have selected the following preset:\n\n5 minutes.</string>
    <string name="SessionInputPresetSelection2">You have selected the following preset:\n\n10 minutes.</string>
    <string name="SessionInputPresetSelection3">You have selected the following preset:\n\n20 minutes.</string>
    <string name="SessionInputPresetSelection4">You have selected the following preset:\n\n30 minutes.</string>
    <string name="SessionInputPresetSelection5">You have selected the following preset:\n\n60 minutes.</string>
    <string name="SessionInputPresetSelection6">You have selected the following preset:\n\n90 minutes.</string>
    <string name="timeButton">Time</string>
    <string name="spmButton">SPM</string>
    <string name="distButton">Distance</string>
    <string name="week">WEEK</string>
    <string name="month">MONTH</string>
    <string name="time">Target time:</string>
    <string name="targTime">Target Time</string>
    <string name="distance">Distance:</string>
    <string name="spm">SPM:</string>
    <string name="targDistance">Target Distance</string>
    <string name="lineSkip">\n</string>
    <string name="title_activity_sensor">Sensor</string>
    <string name="spmNumbers">00</string>
    <string name="elapsedTime">Elapsed time:</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="tsMonday">12</string>

    <string name="navSessionInput">Start session</string>
    <string name="navMain">Main screen</string>
    <string name="navStatistics">Statistics</string>
    <string name="navGuide">Guide</string>
    <string name="drawerHeaderTitle">RowBot - Main screen</string>
    <string name="drawerHeaderTitleSession">RowBot - Session</string>
    <string name="drawerHeaderTitleStatistics">RowBot - Statistics</string>
    <string name="drawerHeaderTitleGuide">RowBot - Guide</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- KEYS -->

    <string name="currentTime">b135.rowbot_p2.currentTime</string>
    <string name="setTime">b135.rowbot_p2.setTime</string>
</resources>
