<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics">

    <android.support.v4.view.ViewPager
        android:id="@+id/timeSpentVP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@id/divider"
        android:padding="5dp"
        android:visibility="gone" />

    <android.support.v4.view.ViewPager
        android:id="@+id/spmVP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@id/divider"
        android:padding="5dp"
        android:visibility="gone" />

    <android.support.v4.view.ViewPager
        android:id="@+id/distanceVP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@id/divider"
        android:padding="5dp"
        android:visibility="gone" />

    <View
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="141dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/rightSideLadder"
        android:layout_width="143dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="fill_horizontal|center"
        android:orientation="vertical"
        android:showDividers="none">

        <Button
            android:id="@+id/TimeButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="timeSelected"
            android:text="@string/timeButton" />

        <Button
            android:id="@+id/spmButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="spmSelected"
            android:text="@string/spmButton" />

        <Button
            android:id="@+id/distButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="distanceSelected"
            android:text="@string/distButton" />
    </LinearLayout>

</RelativeLayout>